# synapse

./: Cargo.toml  LICENSE  README.md  test.py  x86-64-synapse.json
.cargo/: config.toml
config/: limine.cfg
src/: main.rs  vga_graphics.rs
src/arch/x86_64/: cpu_local.rs  mod.rs
src/mem/: Cargo.toml
syn_syscall/: Cargo.toml
syn_syscall/src/: syscall.rs
